tests/NormalTests/paczka1/small_fuzzy/37535042.err
Error in line 1: u4F S468 67,4
Error in line 2: u4F A422 11,7
Error in line 11: NNtM9 S971 71,8
